# dojo-ml

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  END-TO-END-EXAMPLE.md  FRONTEND_DESIGN_SYSTEM.md  FRONTEND_IMPROVEMENTS_PLAN.md  FRONTEND_REFACTOR_PLAN.md  LICENSE  MASTER_PLAN.md  Makefile  NEXT_STEPS.md  README.md  RELEASING.md  justfile  pyproject.toml  ruff.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: FRONTEND_IMPLEMENTATION.md  FRONTEND_WORKSPACE_TRACEABILITY_PLAN.md  MASTER_PLAN.md  MLFLOW_MEMORY_PLAN.md  NEXT_STEPS.md  RELEASING.md  STRUCTURE.md  WORKSPACE_AND_TRACEABILITY_PLAN.md  end-to-end-agent-harness-original.md  end-to-end-agent-harness-v1.md  end-to-end-agent-harness-v2.md  unify-agent-interfaces.md
docs/archive/: end-to-end-agent-harness-v2.md
docs/superpowers/plans/: 2026-05-04-per-run-artifacts-and-task-contract.md  2026-05-05-evaluate-artifacts-dir-parameter.md  2026-05-05-knowledge-flush-and-linking.md  2026-05-06-v0.0.11-program-split-artifacts-startup.md
docs/superpowers/specs/: 2026-05-04-per-run-artifacts-and-task-contract-design.md  2026-05-05-evaluate-artifacts-dir-parameter-design.md  2026-05-05-knowledge-flush-and-linking-design.md  2026-05-06-v0.0.11-program-split-artifacts-startup-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: state-badge.tsx
frontend/src/hooks/: use-agent-events.ts  use-agent.ts  use-domain-experiments.ts  use-domain-knowledge.ts  use-domain-metrics.ts  use-domain.ts  use-domains.ts  use-experiments.ts  use-health.ts  use-knowledge-evolution.ts  use-knowledge.ts  use-tasks.ts
frontend/src/lib/: api.ts  parse-event.ts
frontend/src/pages/: agent.tsx  dashboard.tsx  domain-detail.tsx  domain-overview.tsx  experiments.tsx  (+3 more)
housing/: PROGRAM.md  __dojo_train_1.py  _dojo_36923181056.py  dojo_runner.py  evaluate.py  load_data.py
scripts/: test_tools_standalone.py
src/dojo/: _version.py
tests/: conftest.py
tests/e2e/: test_agent_run.py  test_domain_lifecycle.py  test_freeze_gate.py  test_full_lifecycle.py
tests/integration/: test_canonical_tools.py  test_cli_phase2.py  test_init_writes_setup.py  test_memory_integration.py  test_mlflow_integration.py  test_run_experiment_artifacts.py  test_task_contract_version.py  test_task_setup.py  test_train_artifacts.py
tests/unit/: test_agent_backend.py  test_agent_orchestrator.py  test_agent_prompts.py  test_build_lab.py  test_claude_adapter.py  test_claude_model_flag.py  test_cli_state.py  test_code_run_serialization.py  test_collect_tools_from_task.py  test_complete_experiment_gate.py  test_domain.py  test_domain_tools.py  test_experiment_service.py  test_experiment_tools.py  test_file_tracker.py  test_ingest_artifacts.py  test_knowledge_linker.py  test_knowledge_tools.py  test_local_domain_storage_workspace.py  test_local_storage.py  test_mlflow_tracker.py  test_noop_tracker.py  test_orchestrator.py  test_program_loader.py  test_regression_prompt.py  test_run_experiment_code.py  test_run_store.py  test_runner.py  test_sandbox_naming.py  test_settings.py  test_setup_loader.py  test_summarizer.py  test_task_service.py  test_task_type_spec_fields.py  test_tool_base.py  test_tool_generation.py  test_tool_verifier.py  test_tool_verifier_fixtures.py  test_tool_verifier_markers.py  test_tracking_tools.py  (+2 more)
(+157 files in other folders)
