[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dojoml"
version = "0.0.7"
description = "AI-powered autonomous ML research framework — agent runs experiments against frozen evaluation contracts on your existing pipelines."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Marcus Garsdal", email = "marcus.garsdal@electricitymaps.com" }]
keywords = ["ml", "machine-learning", "agents", "experiments", "mlops", "claude", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "httpx>=0.28",
    "structlog>=24.0",
    "python-ulid>=3.0",
    "sse-starlette>=2.0",
    "claude-agent-sdk>=0.1.48",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.80"]
mlflow = ["mlflow>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.10",
    "mlflow>=3.0",
]

[project.urls]
Homepage = "https://github.com/marcusgarsdal/Dojo"
Repository = "https://github.com/marcusgarsdal/Dojo"
Issues = "https://github.com/marcusgarsdal/Dojo/issues"

[project.scripts]
dojo = "dojo.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/dojo"]

[tool.hatch.build.targets.sdist]
include = [
    "src/dojo",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.10",
    "mlflow>=3.0",
]
